<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relative_policy"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_padding">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="170dp"
            android:layout_height="118dp"
            android:layout_alignBottom="@+id/imageView"
            android:layout_marginEnd="35dp"
            android:layout_toStartOf="@+id/imageView"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_hns_logo"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="122dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_logo_bigmomma"
            tools:ignore="VectorDrawableCompat" />


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_title"
        android:padding="@dimen/standard_padding"
        android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy1"
            android:paddingLeft="@dimen/standard_padding"
            android:paddingStart="@dimen/standard_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy2"
            android:paddingLeft="@dimen/standard_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy3"
            android:paddingLeft="@dimen/standard_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_info"
            android:padding="@dimen/standard_padding"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_info1"
            android:paddingLeft="@dimen/standard_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_give"
            android:padding="@dimen/standard_padding"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_give1"
            android:paddingLeft="@dimen/standard_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_collect"
            android:padding="@dimen/standard_padding"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_collect1"
            android:paddingLeft="@dimen/standard_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_collect2"
            android:paddingLeft="@dimen/standard_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_collect3"
            android:paddingLeft="@dimen/standard_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_protect"
            android:padding="@dimen/standard_padding"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_protect1"
            android:paddingLeft="@dimen/standard_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_protect2"
            android:paddingLeft="@dimen/standard_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_protect3"
            android:paddingLeft="@dimen/standard_padding"
            android:layout_marginBottom="@dimen/standard_margin"/>
    </LinearLayout>

</ScrollView>