<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="172dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_hns_logo" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_about1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about1"
            android:paddingTop="@dimen/standard_padding"
           />

        <TextView
            android:id="@+id/tv_about2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about2"
            android:paddingTop="@dimen/standard_padding"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about3"
            android:paddingTop="@dimen/standard_padding"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about4"
            android:paddingTop="@dimen/standard_padding"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about5"
            android:paddingTop="@dimen/standard_padding"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about6"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about7"
            android:textStyle="bold"
            />


    </LinearLayout>

</ScrollView>